<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bowls</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="dollar_sign">$</string>
    <string name="percent_sign">%</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zero_dollars">0.00</string>
    <string name="zero_percent">0%</string>
    <string name="x_dollars">$ %.2f</string>
    <string name="x_percent">%.4f %%</string>
    <string name="tax_percent">8.875</string>
    <string name="tip_percent">15</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="nodot">.</string>
    <string name="no0">0</string>
    <string name="split_equally">Split \n Equally</string>
    <string name="split_line">Split by \n Bill Items</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="tax">Tax</string>
    <string name="tip">Tip</string>
    <string name="presets_button">Preferences</string>
    <string name="bill">BILL</string>
    <string name="new_li"> + ADD ITEM +</string>
    <string name="bill_subtotal">Subtotal:</string>
    <string name="bill_tax">Tax:</string>
    <string name="bill_tip">Tip:</string>
    <string name="bill_total">Total:</string>
    <string name="done">OK</string>
    <string name="fade_edit">Edit</string>
    <string name="non_zero">Enter non-zero number</string>
    <string name="percent_limit">Must be &lt; 100%</string>
    <string name="q_enter_first_li">First item price</string>
    <string name="q_enter_next_li">Next item price</string>
    <string name="q_enter_subtotal">Subtotal</string>
    <string name="q_select_bowls">Who had it? Tap them</string>
    <string name="q_enter_tax_dollars">Tax dollars</string>
    <string name="q_enter_tip_percent">Tip percent</string>
    <string name="q_min_select">Select at least one bowl</string>
    <string name="q_ask_percent" formatted="false">Do you want to apply %.4f%% %s?</string>
    <string name="q_ask_amount" formatted="false">Do you want to apply $ %.2f %s?</string>
    <string name="q_user_has_balance">Deleting user with non-zero balance. 
	    	\nShared items will have their price redistributed. 
	    	\nItems associated only with this user will deleted.</string>
    <string name="descript_edit_subtotal">Edit subtotal</string>
    <string name="descript_edit_tax">Edit tax amount</string>
    <string name="descript_edit_tip">Edit tip percent</string>
    <string name="descript_tutorial1">To add person, tap center bowl.</string>

    <dimen name="number_buttons_margin">1dp</dimen>
    <dimen name="number_buttons_size">5dp</dimen>

    <string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="credits">Created by \n ALICE Q. WONG</string>
</resources>
