<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prelude_bg"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".PreludeFragment" >

    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1">
        
     <Button
         android:id="@+id/btn_presets"
         android:layout_width="@dimen/pref_btn_w"
         android:layout_height="@dimen/pref_btn_h"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/preferences"
         android:gravity="center_horizontal|bottom"
         android:textSize="@dimen/pref_btn_text"
         android:textColor="@android:color/white"
         android:text="@string/presets_button"
         android:shadowColor="@color/raspberry"
         android:shadowDx="2"
         android:shadowDy="-2"
         android:shadowRadius="3"
        android:onClick="onOpenPresets"
          />

     <ImageView
         android:id="@+id/logo"
         android:layout_width="@dimen/logo_size"
         android:layout_height="@dimen/logo_size"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:contentDescription="@string/app_name"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:padding="@dimen/pad"
         android:src="@drawable/main"
       />
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/logo"
         android:minEms="@integer/spacing"
         android:shadowColor="@color/grapefruit"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="2"
         android:text="@string/credits"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:typeface="monospace" />

    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@android:color/white" >

        <Button
            android:id="@+id/btn_split_equally"
            style="@style/SplitButtons"            
            android:text="@string/split_equally"
            android:textColor="@color/raspberry"
            android:background="@color/lime"
                        android:onClick="onSplitEqually"
             />

        <Button
            android:id="@+id/btn_split_line"
            style="@style/SplitButtons"   
            android:text="@string/split_line"
			android:background="@color/raspberry"
            android:textColor="@color/lime"
                        android:onClick="onSplitByItem"
            
             />
    </LinearLayout>

</LinearLayout>