<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/ic_launcher">
        
     <Button android:id="@+id/btn_presets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/presets_button"
        android:layout_gravity="center|bottom"
        android:onClick="onOpenPresets" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_split_equally"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSplitEqually"
            android:text="@string/split_equally" />

        <Button
            android:id="@+id/btn_split_line"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSplitByItem"
            android:text="@string/split_line" />
    </LinearLayout>

</LinearLayout>