<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/toast_frame">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/user_subtotal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_subtotal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastLabel"
             />
        <TextView
            android:id="@+id/user_subtotal_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastValue" />
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
             <TextView
            android:id="@+id/user_tax_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_tax"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastLabel" />
        <TextView
            android:id="@+id/user_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastValue" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
            <TextView
            android:id="@+id/user_tip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_tip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastLabel" />
        <TextView
            android:id="@+id/user_tip_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_dollars"
            android:textAppearance="?android:attr/textAppearanceSmall"
            style="@style/ToastValue" />
    </TableRow>

</TableLayout>
